7-kubernetes/task10-network-work/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 3000
      targetPort: 3000
