7-kubernetes/task10-network-work/service-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: cache
  ports:
    - name: cache
      protocol: TCP
      port: 4000
      targetPort: 4000
