7-kubernetes/task10-network-work/allow-backend-to-cache.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache # принимающий под
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend # отправляющий
    ports:
    - protocol: TCP
      port: 4000 # порт слушателя
